--- a/src/Ace/CmsBundle/Resources/views/Event/create-update.html.twig
+++ b/src/Ace/CmsBundle/Resources/views/Event/create-update.html.twig
@@ -12,5 +12,7 @@
     {{ form_row(form.start) }}
     {{ form_row(form.end) }}
     {{ form_row(form.blogs) }}
+    {{ form_row(form.brochure) }}
+    {{ form_row(form.submit, {attr: {class: 'btn-primary'}}) }}
     {{ form_end(form) }}
 {% endblock content %}
