--- a/src/Ace/CommonBundle/Resources/views/Default/layout.html.twig
+++ b/src/Ace/CommonBundle/Resources/views/Default/layout.html.twig
@@ -83,7 +83,7 @@
 {% javascripts
 'assets/vendor/jquery/dist/jquery.min.js'
 'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
-'@AceCommonBundle/Resources/public/js/common.js' %}
+'assets/theme/default/js/main.js' %}
 <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
 </body>
