--- a/web/assets/theme/default/css/main.css
+++ b/web/assets/theme/default/css/main.css
@@ -6,9 +6,11 @@ html,
 body {
     overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
+
 body {
     padding-top: 70px;
 }
+
 footer {
     padding: 30px 0;
 }
@@ -56,4 +58,32 @@ footer {
         top: 0;
         width: 50%; /* 6 columns */
     }
+}
+
+.control-label.required:after {
+    content:" *";
+    color:red;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
